--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -21,16 +21,19 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/primary_blue"
-            app:navigationIcon="@drawable/baseline_arrow_back_24"
             app:collapseIcon="@drawable/baseline_sort_24"
+            app:navigationIcon="@drawable/baseline_arrow_back_24"
             app:navigationIconTint="@color/white"
             app:title="Article"
             app:titleTextColor="@color/white" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <WebView
+        android:id="@+id/wvArticle"
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="0dp"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
