--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
+    android:background="@color/secondary_blue"
     tools:context=".activities.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -22,9 +22,9 @@
             android:layout_height="?attr/actionBarSize"
             app:menu="@menu/menu_navigation"
             android:background="@color/primary_blue"
-            app:navigationIcon="@drawable/baseline_arrow_back_24"
+            app:titleCentered="true"
             app:navigationIconTint="@color/white"
-            app:title="More Details"
+            app:title="The News App"
             app:titleTextColor="@color/white" />
     </com.google.android.material.appbar.AppBarLayout>
 
